# plug

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  bootstrap  configure.ac
etc/bash_completion.d/: plug
man/: plug.1
