# This file is part of Plug, see <https://qu1x.org/plug>.
# 
# Copyright (c) 2016 Rouven Spreckels <n3vu0r@qu1x.org>
# 
# Plug is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License version 3
# as published by the Free Software Foundation on 19 November 2007.
# 
# Plug is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Affero General Public License for more details.
# 
# You should have received a copy of the GNU Affero General Public License
# along with Plug. If not, see <https://www.gnu.org/licenses>.

AUTOMAKE_OPTIONS = subdir-objects

dist_bin_SCRIPTS = bin/plug

bash_completiondir = $(sysconfdir)/bash_completion.d
dist_bash_completion_DATA = etc/bash_completion.d/plug

dist_man_MANS = man/plug.1
